<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top|center_vertical"
    android:orientation="vertical"
    tools:context=".activity.TermoDeAdocaoActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewTermo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/textTermo1"
            android:textAlignment="textStart"
            android:textColor="@color/text_gray_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewTermo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/textTermo2"
            android:textAlignment="textStart"
            android:textColor="@color/text_gray_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewTermo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/textTermo3"
            android:textAlignment="textStart"
            android:textColor="@color/text_gray_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewTermo4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/textTermo4"
            android:textAlignment="textStart"
            android:textColor="@color/text_gray_color"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonAdocao"
            android:layout_width="232dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAzul"
            android:text="@string/btnAdocao"
            android:textColor="@color/color_enabled_text" />

        <Button
            android:id="@+id/buttonApadrinhamento"
            android:layout_width="232dp"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorAzul"
            android:text="@string/btnApadrinhamento"
            android:textColor="@color/color_enabled_text" />
    </LinearLayout>
</LinearLayout>